--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,10 +1,18 @@
 pipeline {
   agent any
-  
   stages {
-    stage('Say Hello') {
+  stage('Stage 1') {
       steps {
-        echo 'Hello, World!'
+        script {
+          echo 'Stage 1'
+        }
+      }
+    }
+  stage('Stage 2') {
+      steps {
+        script {
+          echo 'Stage 2'
+        }
       }
     }
   }
